feat: virtual dom and react renderer

--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
 
    
 
-  <script type="module" src="src/ts/index.ts"></script>
+  <script type="module" src="src/ts/index.tsx"></script>
 </html>
